# dj-weather

./: .gitignore  build-latest.sh  deploy.sh  pyproject.toml  run.sh
Dockerfiles/: Dockerfile  docker-compose.dev.yaml  docker-compose.yaml
djweather/: .coveragerc  conftest.py  manage.py  pytest.ini  run_tests.sh
djweather/core/exceptions/: exceptions.py
djweather/core/responses/exceptions/: errors.py  handlers.py
djweather/core/responses/successes/: successes.py
djweather/djweather/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
djweather/subscriptions/: models.py  serializers.py  services.py  tasks.py  urls.py  views.py
djweather/subscriptions/migrations/: 0001_initial.py  0002_alter_subscription_start_datetime.py
djweather/subscriptions/queue/: redis.py
djweather/subscriptions/templates/subscriptions/: aggregated_email.html  email.html
djweather/users/: serializers.py  urls.py  views.py
djweather/users/tests/: test_serializers.py  test_urls.py  test_views.py
djweather/weathermanager/: apps.py  serializers.py  urls.py  views.py
djweather/weathermanager/services/: TomorrowIOEndpoints.py  TomorrowIOService.py  WeatherService.py  service_factory.py
frontend/src/: main.js
